--- a/src/Components/layout/Navigation.module.scss
+++ b/src/Components/layout/Navigation.module.scss
@@ -9,7 +9,7 @@
     font-family: 'Crimson Text', serif;
     position: sticky;
     top: var(--nav-sticky-top);
-    z-index: 10;
+    z-index: 1000;
     background-color: var(--navbar-bg);
 
     box-shadow: 0 -2px 8px rgb(0 0 0 / 32%);
