--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -725,7 +725,7 @@ h3 {
       background-position: center center;
       background-attachment: fixed;
       overflow: hidden;
-      z-index: 1;
+      z-index: 100;
 
       .tablist {
         background-color: transparent;
